# actix-web-metrics

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: basic_server.rs  configuring_default_metrics.rs  custom_metrics.rs  prometheus_endpoint.rs  with_cardinality_on_params.rs
src/: lib.rs
tests/: integration_tests.rs
tests/snapshots/: integration_tests__middleware_basic.snap  integration_tests__middleware_basic_failure.snap  integration_tests__middleware_const_labels.snap  integration_tests__middleware_custom_counter-2.snap  integration_tests__middleware_custom_counter.snap  integration_tests__middleware_excludes.snap  integration_tests__middleware_match_pattern.snap  integration_tests__middleware_metrics_config.snap  integration_tests__middleware_with_mask_unmatched_pattern.snap  integration_tests__middleware_with_mixed_params_cardinality-2.snap  integration_tests__middleware_with_mixed_params_cardinality.snap  integration_tests__middleware_with_size_metrics.snap
