[package]
name = "actix-web-metrics"
version = "0.9.0"
authors = ["Ross Sullivan <rosssullivan101@gmail.com>"]
edition = "2021"
description = "Metrics.rs integration for Actix Web"
documentation = "https://docs.rs/actix-web-prom"
repository = "https://github.com/nlopes/actix-web-prom.git"
keywords = ["actix", "actix-web", "middleware", "prometheus", "web"]
categories = ["web-programming"]
license = "MIT"
readme = "README.md"
exclude = [".gitignore", ".github/", "README.tpl", "examples/"]

[dependencies]
strfmt = { version = "0.2.4" }
actix-web = { version = "4", default-features = false, features = ["macros"] }
futures-core = "0.3"
pin-project-lite = "0.2"
regex = "^1.4"
log = "0.4"
metrics = "0.24"

